--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/express": "4.17.1",
     "@types/js-levenshtein": "^1.1.0",
     "@types/mongodb": "^3.3.3",
+    "@types/node-fetch": "^2.5.6",
     "@types/serve-static": "^1.13.3",
     "@types/shortid": "^0.0.29",
     "@types/simple-oauth2": "^2.2.1",
@@ -59,6 +60,7 @@
     "gar": "^1.0.4",
     "js-levenshtein": "^1.1.6",
     "nodemon": "^2.0.2",
+    "node-fetch": "^2.6.0",
     "patreon": "^0.4.1",
     "serve-static": "^1.14.1",
     "shortid": "^2.2.15",
