Card updates! Family edition! Bug fixes! UI Improvements!

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@types/react-helmet": "^5.0.15",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
+    "@types/sanitize-html": "^1.22.0",
     "@types/shortid": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -80,6 +81,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.1",
     "resolve": "1.10.0",
+    "sanitize-html": "^1.23.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "shortid": "^2.2.15",
