--- a/client/package.json
+++ b/client/package.json
@@ -80,6 +80,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.1",
+    "react-twitter-embed": "^3.0.3",
     "resolve": "1.10.0",
     "sanitize-html": "^1.23.0",
     "sass-loader": "7.2.0",
