--- a/client/package.json
+++ b/client/package.json
@@ -96,7 +96,8 @@
     "webpack": "4.39.1",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "react-emoji-render": "^1.2.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
