--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^8.1.0",
     "gar": "^1.0.4",
+    "human-readable-ids": "^1.0.4",
     "js-levenshtein": "^1.1.6",
     "nodemon": "^2.0.2",
     "node-fetch": "^2.6.0",
