--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "deep-equal": "^2.0.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
+    "es6-promise": "^4.2.8",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
@@ -68,6 +69,7 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "promise.prototype.finally": "^3.1.2",
     "react": "^16.9.0",
     "react-animated-burgers": "^1.2.7",
     "react-app-polyfill": "^1.0.2",
