License updates Sponsor updates DB changes Logging improvements

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server/server.ts",
   "scripts": {
-    "installall": "yarn install && cd client && yarn install",
+    "installall": "concurrently --kill-others \"yarn install\" \"yarn install-client\"",
+    "install-client": "cd client && yarn install",
     "client": "cd client && yarn start",
     "server": "node -r ts-node/register --inspect=5001 --nolazy server/server.ts --runInBand",
     "server-watch": "nodemon",
@@ -63,9 +64,11 @@
     "gar": "^1.0.4",
     "human-readable-ids": "^1.0.4",
     "js-levenshtein": "^1.1.6",
+    "log-timestamp": "^0.3.0",
     "nodemon": "^2.0.2",
     "node-fetch": "^2.6.0",
     "patreon": "^0.4.1",
+    "redis": "^3.0.2",
     "serve-static": "^1.14.1",
     "shortid": "^2.2.15",
     "ts-loader": "^6.1.0",
