--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@types/js-levenshtein": "^1.1.0",
     "@types/mongodb": "^3.3.3",
     "@types/node-fetch": "^2.5.6",
+    "@types/redis": "^2.8.18",
+    "@types/node-redis-pubsub": "^3.0.0",
     "@types/serve-static": "^1.13.3",
     "@types/shortid": "^0.0.29",
     "@types/simple-oauth2": "^2.2.1",
@@ -69,6 +71,7 @@
     "node-fetch": "^2.6.0",
     "patreon": "^0.4.1",
     "redis": "^3.0.2",
+    "node-redis-pubsub": "^4.0.0",
     "serve-static": "^1.14.1",
     "shortid": "^2.2.15",
     "ts-loader": "^6.1.0",
