--- a/package.json
+++ b/package.json
@@ -38,7 +38,17 @@
     "mongodb": "^3.3.2",
     "simple-oauth2": "^3.1.0",
     "ts-node": "^8.3.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "node-fetch": "^2.6.0",
+    "patreon": "^0.4.1",
+    "redis": "^3.0.2",
+    "winston": "^3.2.1",
+    "ws": "^7.2.3",
+    "shortid": "^2.2.15",
+    "dotenv": "^8.2.0",
+    "human-readable-ids": "^1.0.4",
+    "js-levenshtein": "^1.1.6",
+    "log-timestamp": "^0.3.0"
   },
   "devDependencies": {
     "@types/apicache": "^1.2.2",
@@ -50,12 +60,8 @@
     "@types/mongodb": "^3.3.3",
     "@types/node-fetch": "^2.5.6",
     "@types/redis": "^2.8.18",
-    "@types/node-redis-pubsub": "^3.0.0",
     "@types/serve-static": "^1.13.3",
     "@types/shortid": "^0.0.29",
-    "@types/simple-oauth2": "^2.2.1",
-    "@types/swagger-jsdoc": "^3.0.2",
-    "@types/swagger-ui-react": "^3.23.0",
     "@types/ws": "^7.2.3",
     "@typescript-eslint/eslint-plugin": "2.6.1",
     "@typescript-eslint/parser": "2.6.1",
@@ -66,20 +72,12 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^8.1.0",
     "gar": "^1.0.4",
-    "human-readable-ids": "^1.0.4",
-    "js-levenshtein": "^1.1.6",
-    "log-timestamp": "^0.3.0",
+    "node-7z": "^2.1.1",
+    "7zip-bin-win": "^2.2.0",
     "nodemon": "^2.0.2",
-    "node-fetch": "^2.6.0",
-    "patreon": "^0.4.1",
-    "redis": "^3.0.2",
-    "node-redis-pubsub": "^4.0.0",
     "serve-static": "^1.14.1",
-    "shortid": "^2.2.15",
     "ts-loader": "^6.1.0",
     "webpack": "4.39.1",
-    "webpack-cli": "^3.3.8",
-    "winston": "^3.2.1",
-    "ws": "^7.2.3"
+    "webpack-cli": "^3.3.8"
   }
 }
